# jcode

./: .gitignore  Cargo.toml  HANDOFF_2026-05-10_v2.md  LAZYDINO_AUTONOMY_GROUP_SPEC.md  LAZYDINO_LIVE_VERIFICATION_M9_M14a.md  LAZYDINO_MAINTENANCE.md  LAZYDINO_MILESTONES.md  LAZYDINO_STATUS_2026-05-11.md  LAZYDINO_TEST_PLAN.md  README.md
crates/jcode-agent-runtime/: Cargo.toml
crates/jcode-compaction-core/: Cargo.toml
crates/jcode-config-types/: Cargo.toml
crates/jcode-provider-core/: Cargo.toml
crates/jcode-session-types/: Cargo.toml
crates/jcode-session-types/src/: lib.rs
crates/jcode-tui-markdown/: Cargo.toml
docs/: HOOKS_USER_GUIDE.md  M31_BG_AUTO_INJECT.md  M35_LIFECYCLE_HOOK_INJECT.md  PRIVATE_INSTRUCTIONS.md  SESSION_CWD_COMMANDS.md
docs/lazydino/: MEMORY.md
scripts/: fork-push.sh
scripts/lazydino/: install-custom-jcode.sh  reapply-custom-stack.sh
src/: agent.rs  agent_profiles_md.rs  agent_tests.rs  background.rs  browser.rs  browser_tests.rs  bus.rs  compaction.rs  compaction_tests.rs  config.rs  config_tests.rs  cwd.rs  doctor.rs  doctor_tests.rs  hooks.rs  lib.rs  process_title.rs  project_commands.rs  project_init.rs  prompt.rs  prompt_tests.rs  provider_catalog.rs  provider_catalog_tests.rs  server.rs  session.rs  skill.rs  usage_openai.rs
src/agent/: compaction.rs  interrupts.rs  messages.rs  provider.rs  response_recovery.rs  streaming.rs  tools.rs  turn_execution.rs  turn_loops.rs  turn_streaming_broadcast.rs  turn_streaming_mpsc.rs
src/auth/: kimi.rs  lifecycle.rs  mod.rs  tests.rs
tests/: m22_stage2_parallel_tools.rs
(+293 files in other folders)
