[package]
name = "jcode-session-types"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
jcode-compaction-core = { path = "../jcode-compaction-core" }
jcode-message-types = { path = "../jcode-message-types" }
serde = { version = "1", features = ["derive"] }
